# TheBattleOfArchers

./: .gitmodules  CMakeLists.txt
Assets/: Assets.xml
CMake/: src.cmake
Engine/: CMakeLists.txt
Engine/CMake/: src.cmake
Engine/Src/Engine/: Engine.cpp  Engine.hpp
Engine/Src/Engine/Core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  FileSystem.cpp  FileSystem.hpp  Input.cpp  Input.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Engine/Src/Engine/ECS/: System.cpp  System.hpp  Systems.cpp  Systems.hpp
Engine/Src/Engine/ECS/Components/: RefreshTransformsComponent.cpp  RefreshTransformsComponent.hpp  TextureComponent.cpp  TextureComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
Engine/Src/Engine/ECS/Systems/: DrawSystem.cpp  DrawSystem.hpp  IsoDrawSystem.cpp  IsoDrawSystem.hpp  RefreshTransformsSystem.cpp  RefreshTransformsSystem.hpp
Engine/Src/Engine/Resources/: IResource.hpp  Resources.cpp  Resources.hpp  ResourcesParser.cpp  ResourcesParser.hpp
Engine/Src/Engine/Resources/Types/: ResourceTexture.cpp  ResourceTexture.hpp
Engine/Src/Engine/Scene/: Scene.cpp  Scene.hpp
Engine/Src/Engine/Settings/: IsoSettings.cpp  IsoSettings.hpp  Settings.cpp  Settings.hpp
Src/: main.cpp
Src/Game/ECS/Components/: ArcherComponent.cpp  ArcherComponent.hpp
Src/Game/ECS/Systems/: SpawnArchersSystem.cpp  SpawnArchersSystem.hpp
